--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MAX_DYNAMO_DB_CONNECTIONS=25
+DYNAMO_DB_TABLE_NAME=URL_DATA
+REDIS_NODES=127.0.0.1:6380,127.0.0.1:6381,127.0.0.1:6382,127.0.0.1:6383,127.0.0.1:6384,127.0.0.1:6385
