--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^5.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "redis": "^5.1.1",
     "winston": "^3.17.0"
   }
 }
