updated caching flow

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MAX_DYNAMO_DB_CONNECTIONS=25
 DYNAMO_DB_TABLE_NAME=URL_DATA
 REDIS_NODES=127.0.0.1:6380,127.0.0.1:6381,127.0.0.1:6382,127.0.0.1:6383,127.0.0.1:6384,127.0.0.1:6385
 KAFKA_BROKERS=localhost:19092,localhost:29092,localhost:39092
+CACHE_TTL=86400
